Updated services and tests for doctor and appointment APIs